# curl2json

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
src/curl2json/: cli.py  core.py  parser.py
tests/: test_core.py
